--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.5, user-scalable=1, shrink-to-fit=no" name="viewport">
-    <meta name="description" content="Marizu-Ibewiro Makozi OfficialStart your development with a Design System for Bootstrap 4 and Vue.js.">
+    <meta name="description" content="Marizu-Ibewiro Makozi Official Website">
     <meta name="author" content="Marizu-Ibewiro Makozi">
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.png"> -->
     <!-- <link rel="icon" href="./public/favicon.png"> -->
